--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI="mongodb+srv://md570:thiwanka%40570MongoDb@cluster0.ys1pg.mongodb.net/url_shortner?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI=""
 PORT=5000
-JWT_SECRET="thiwanka1234"
+JWT_SECRET=""
